# autopilot

./: .gitignore  CLAUDE.md  README.md  demo_agents.py  docker-compose.yml  main.py  pyproject.toml  simple_runner.py  util.py
.claude/: settings.local.json
.github/: copilot-instructions.md
agents/: codebase_intel.py  orchestrator.py  prep.py
agents/codebase_intel/: agent.py
agents/commit/: agent.py
agents/dev/: agent.py
agents/orchestrator/: agent.py
agents/pr/: agent.py
agents/prep/: agent.py
agents/remediation/: agent.py
agents/repo_setup/: agent.py
agents/review/: agent.py
agents/test_agent/: agent.py
checkpoints/: db.py
checkpoints/ui/: server.py
checkpoints/ui/frontend/: index.html  package-lock.json  package.json  vite.config.js
checkpoints/ui/frontend/src/: App.vue
core/: pipeline.py
core/state/: manifest.py
hello_python/: __init__.py  main.py
infra/: docker-compose.yml
