[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello-python"
version = "0.1.0"
description = "A simple Hello World Python project using uv package manager"
authors = [
    {name = "Author Name", email = "author@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "langgraph",
    "langchain-google-genai",
    "langchain-community", 
    "chromadb",
    "tree-sitter",
    "redis",
    "psycopg2-binary",
    "PyGithub",
    "jira",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.scripts]
hello = "hello_python.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",

]